Footer: back-to-top button, more links, credibility line

--- a/index.html
+++ b/index.html
@@ -452,17 +452,25 @@
   </section>
 
   <!-- Footer -->
+  <!-- Back to Top -->
+  <a href="#home" class="back-to-top" aria-label="Back to top">
+    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="18 15 12 9 6 15"/></svg>
+  </a>
+
   <footer class="footer">
     <div class="container">
       <div class="footer-content">
         <div class="footer-brand">
           <p class="footer-logo">Ellie Rose</p>
           <p class="footer-tagline">Las Vegas Violinist</p>
+          <p class="footer-cred">Super Bowl LVIII • Trans-Siberian Orchestra • 500+ Events</p>
         </div>
         <div class="footer-links">
           <a href="#about">About</a>
-          <a href="#services">Services</a>
+          <a href="#services">Performances</a>
           <a href="#videos">Videos</a>
+          <a href="#gallery">Gallery</a>
+          <a href="#faq">FAQ</a>
           <a href="#contact">Contact</a>
         </div>
         <p class="footer-copyright">© 2026 Ellie Rose. All rights reserved.</p>
